; ModuleID = '/home/carl/AnghaBench/libgit2/tests/object/commit/extr_commitstagedfile.c_test_object_commit_commitstagedfile__amend_commit.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/object/commit/extr_commitstagedfile.c_test_object_commit_commitstagedfile__amend_commit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [19 x i8] c"treebuilder/myfile\00", align 1
@.str.1 = private unnamed_addr constant [16 x i8] c"This is a file\0A\00", align 1
@repo = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [7 x i8] c"myfile\00", align 1
@.str.3 = private unnamed_addr constant [13 x i8] c"first commit\00", align 1
@.str.4 = private unnamed_addr constant [5 x i8] c"HEAD\00", align 1
@.str.5 = private unnamed_addr constant [15 x i8] c"Initial commit\00", align 1
@.str.6 = private unnamed_addr constant [24 x i8] c"treebuilder/anotherfile\00", align 1
@.str.7 = private unnamed_addr constant [22 x i8] c"This is another file\0A\00", align 1
@.str.8 = private unnamed_addr constant [12 x i8] c"anotherfile\00", align 1
@GIT_ENOTFOUND = common dso_local global i32 0, align 4
@.str.9 = private unnamed_addr constant [16 x i8] c"refs/heads/nope\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_object_commit_commitstagedfile__amend_commit() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = call i32 @cl_git_mkfile(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0))
  %9 = load i32, i32* @repo, align 4
  %10 = call i32 @git_repository_index(i32** %1, i32 %9)
  %11 = call i32 @cl_git_pass(i32 %10)
  %12 = load i32*, i32** %1, align 8
  %13 = call i32 @git_index_add_bypath(i32* %12, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.2, i64 0, i64 0))
  %14 = call i32 @cl_git_pass(i32 %13)
  %15 = load i32, i32* @repo, align 4
  %16 = call i32 @cl_repo_commit_from_index(i32* %2, i32 %15, i32* null, i32 0, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.3, i64 0, i64 0))
  %17 = load i32, i32* @repo, align 4
  %18 = call i32 @git_commit_lookup(i32** %5, i32 %17, i32* %2)
  %19 = call i32 @cl_git_pass(i32 %18)
  %20 = load i32*, i32** %5, align 8
  %21 = call i32 @git_commit_parentcount(i32* %20)
  %22 = call i32 @cl_assert_equal_i(i32 0, i32 %21)
  %23 = load i32*, i32** %5, align 8
  %24 = call i32 @assert_commit_tree_has_n_entries(i32* %23, i32 1)
  %25 = load i32*, i32** %5, align 8
  %26 = call i32 @assert_commit_is_head(i32* %25)
  %27 = load i32*, i32** %5, align 8
  %28 = call i32 @git_commit_amend(i32* %3, i32* %27, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.4, i64 0, i64 0), i32* null, i32* null, i32* null, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.5, i64 0, i64 0), i32* null)
  %29 = call i32 @cl_git_pass(i32 %28)
  %30 = load i32*, i32** %5, align 8
  %31 = call i32 @git_commit_amend(i32* %3, i32* %30, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.4, i64 0, i64 0), i32* null, i32* null, i32* null, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.5, i64 0, i64 0), i32* null)
  %32 = call i32 @cl_git_fail(i32 %31)
  %33 = load i32, i32* @repo, align 4
  %34 = call i32 @git_commit_lookup(i32** %6, i32 %33, i32* %3)
  %35 = call i32 @cl_git_pass(i32 %34)
  %36 = load i32*, i32** %6, align 8
  %37 = call i32 @git_commit_parentcount(i32* %36)
  %38 = call i32 @cl_assert_equal_i(i32 0, i32 %37)
  %39 = load i32*, i32** %6, align 8
  %40 = call i32 @assert_commit_tree_has_n_entries(i32* %39, i32 1)
  %41 = load i32*, i32** %6, align 8
  %42 = call i32 @assert_commit_is_head(i32* %41)
  %43 = load i32*, i32** %5, align 8
  %44 = call i32 @git_commit_free(i32* %43)
  %45 = load i32*, i32** %6, align 8
  store i32* %45, i32** %5, align 8
  %46 = call i32 @cl_git_mkfile(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.6, i64 0, i64 0), i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.7, i64 0, i64 0))
  %47 = load i32*, i32** %1, align 8
  %48 = call i32 @git_index_add_bypath(i32* %47, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.8, i64 0, i64 0))
  %49 = call i32 @cl_git_pass(i32 %48)
  %50 = load i32*, i32** %1, align 8
  %51 = call i32 @git_index_write_tree(i32* %4, i32* %50)
  %52 = call i32 @cl_git_pass(i32 %51)
  %53 = load i32, i32* @repo, align 4
  %54 = call i32 @git_tree_lookup(i32** %7, i32 %53, i32* %4)
  %55 = call i32 @cl_git_pass(i32 %54)
  %56 = load i32*, i32** %7, align 8
  %57 = call i32 @git_tree_entrycount(i32* %56)
  %58 = call i32 @cl_assert_equal_i(i32 2, i32 %57)
  %59 = load i32, i32* @GIT_ENOTFOUND, align 4
  %60 = load i32*, i32** %5, align 8
  %61 = load i32*, i32** %7, align 8
  %62 = call i32 @git_commit_amend(i32* %3, i32* %60, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.9, i64 0, i64 0), i32* null, i32* null, i32* null, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.5, i64 0, i64 0), i32* %61)
  %63 = call i32 @cl_git_fail_with(i32 %59, i32 %62)
  %64 = load i32*, i32** %5, align 8
  %65 = load i32*, i32** %7, align 8
  %66 = call i32 @git_commit_amend(i32* %3, i32* %64, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.4, i64 0, i64 0), i32* null, i32* null, i32* null, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.5, i64 0, i64 0), i32* %65)
  %67 = call i32 @cl_git_pass(i32 %66)
  %68 = load i32*, i32** %7, align 8
  %69 = call i32 @git_tree_free(i32* %68)
  %70 = load i32, i32* @repo, align 4
  %71 = call i32 @git_commit_lookup(i32** %6, i32 %70, i32* %3)
  %72 = call i32 @cl_git_pass(i32 %71)
  %73 = load i32*, i32** %6, align 8
  %74 = call i32 @git_commit_parentcount(i32* %73)
  %75 = call i32 @cl_assert_equal_i(i32 0, i32 %74)
  %76 = load i32*, i32** %6, align 8
  %77 = call i32 @assert_commit_tree_has_n_entries(i32* %76, i32 2)
  %78 = load i32*, i32** %6, align 8
  %79 = call i32 @assert_commit_is_head(i32* %78)
  %80 = load i32*, i32** %5, align 8
  %81 = call i32 @git_commit_free(i32* %80)
  %82 = load i32*, i32** %6, align 8
  %83 = call i32 @git_commit_free(i32* %82)
  %84 = load i32*, i32** %1, align 8
  %85 = call i32 @git_index_free(i32* %84)
  ret void
}

declare dso_local i32 @cl_git_mkfile(i8*, i8*) #1

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_repository_index(i32**, i32) #1

declare dso_local i32 @git_index_add_bypath(i32*, i8*) #1

declare dso_local i32 @cl_repo_commit_from_index(i32*, i32, i32*, i32, i8*) #1

declare dso_local i32 @git_commit_lookup(i32**, i32, i32*) #1

declare dso_local i32 @cl_assert_equal_i(i32, i32) #1

declare dso_local i32 @git_commit_parentcount(i32*) #1

declare dso_local i32 @assert_commit_tree_has_n_entries(i32*, i32) #1

declare dso_local i32 @assert_commit_is_head(i32*) #1

declare dso_local i32 @git_commit_amend(i32*, i32*, i8*, i32*, i32*, i32*, i8*, i32*) #1

declare dso_local i32 @cl_git_fail(i32) #1

declare dso_local i32 @git_commit_free(i32*) #1

declare dso_local i32 @git_index_write_tree(i32*, i32*) #1

declare dso_local i32 @git_tree_lookup(i32**, i32, i32*) #1

declare dso_local i32 @git_tree_entrycount(i32*) #1

declare dso_local i32 @cl_git_fail_with(i32, i32) #1

declare dso_local i32 @git_tree_free(i32*) #1

declare dso_local i32 @git_index_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
